--- a/translations/kangyur/translations/061-009_toh189-the_sutra_of_the_prophecy_concerning_brahmasri.xml
+++ b/translations/kangyur/translations/061-009_toh189-the_sutra_of_the_prophecy_concerning_brahmasri.xml
@@ -17,10 +17,10 @@
                                         Prediction for Brahmaśrī”</title>
                                 <title type="longTitle" xml:lang="Sa-Ltn">Ārya­brahma­śrīvyākaraṇa­nāma­mahāyāna­sūtra</title>
                                 <title type="otherTitle" xml:lang="zh"/>
-                                <author xml:id="UT22084-061-009-1" role="translatorMain">Translated
+                                <author xml:id="UT22084-061-009-1" role="translatorMain"><!--Translated
                                         by 84000 Translation Team<lb/>under the patronage and
                                         supervision of 84000: Translating the Words of the
-                                        Buddha</author>
+                                        Buddha--></author>
                                 <author role="translatorEng" xml:id="UT22084-061-009-2">Sophie
                                         McGrath</author>
                                 <editor role="projectEditor" xml:id="UT22084-061-009-3">David
@@ -33,7 +33,7 @@
                                         Cotter</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 0.0.2 <date>2023</date>
+                <edition>v 1.0.0 <date>2024</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -42,7 +42,7 @@
                                         is a global non-profit initiative to translate all the
                                         Buddha’s words into modern languages, and to make them
                                         available to everyone. </publisher>
-                                <availability status="2">
+                                <availability status="1.a">
                                         <licence>
                                                 <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                                                 <p>This work is provided under the protection of a
@@ -164,6 +164,12 @@
                 <change who="#line-tofte" when="2023-12-05T12:54:41.369Z" type="text-version" status="0.0.2" xml:id="UT22084-061-009-148">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
+                <change who="#andre" when="2024-03-20T16:54:37.075Z" type="translation-status" status="1.a" xml:id="UT22084-061-009-149">
+                    <desc>1.a</desc>
+                </change>
+                <change who="#andre" when="2024-03-20T16:54:37.075Z" type="text-version" status="1.0.0" xml:id="UT22084-061-009-150">
+                    <desc>First published version</desc>
+                </change>
                         </revisionDesc>
                 </fileDesc>
         </teiHeader>
@@ -176,7 +182,7 @@
                                 <head type="summary" tid="1">Summary</head>
                                 <milestone unit="chunk" xml:id="UT22084-061-009-47"/>
                                 <p tid="2">
-                    <title xml:lang="en">The Prediction for Brahmāśrī</title>
+                    <title xml:lang="en">The Prediction for Brahmaśrī</title>
                                         features a brief encounter between the Buddha, out on his
                                         daily alms round, and a group of children playing on the
                                         outskirts of Śrāvastī. A boy named Brahmaśrī offers the
@@ -219,7 +225,7 @@
                                                 this prompts the Buddha to smile and give a
                                                 prediction of Brahmaśrī’s future awakening.</p>
                                         <milestone unit="chunk" xml:id="UT22084-061-009-53"/>
-                                        <p tid="11">In the introduction to his fine translation of
+                                        <p tid="11">In the introduction to his translation of
                                                 this sūtra,<note place="end" xml:id="UT22084-061-009-54"> Skilling 2021, pp.
                                                   279-80 and note 600. He also points to a stone
                                                   relief from Gandhāra that is said to depict King
@@ -267,9 +273,8 @@
                                                   in Sanskrit contain words for both sand and dirt,
                                                   <foreign xml:lang="Sa-Ltn" type="term">sikatā</foreign> and <foreign xml:lang="Sa-Ltn" type="term">pāṃsu</foreign> (or <foreign xml:lang="Sa-Ltn" type="term">pāṃśu</foreign>),
                                                   respectively. The former term for sand is
-                                                  typically translated into Tibetan with the word
-                                                  “<foreign xml:lang="Bo-Ltn" type="term">bye
-                                                  ma</foreign>,” as it is in the case of the <title xml:lang="en">Lotus Sūtra</title>, whereas the
+                                                  typically translated into Tibetan with <foreign xml:lang="Bo-Ltn" type="term">bye
+                                                  ma</foreign>, as it is in the case of the <title xml:lang="en">Lotus Sūtra</title>, whereas the
                                                   Tibetan translation of <foreign xml:lang="Sa-Ltn" type="term">pāṃsu</foreign>, dirt or dust, is
                                                   typically <foreign xml:lang="Bo-Ltn" type="term">sa rdul</foreign>, and it is this latter term
                                                   that is used throughout <title xml:lang="en">The
@@ -298,7 +303,7 @@
                                                   the Buddha’s smile, see Fiordalis 2021. For more
                                                   translations from the same collection of stories,
                                                   see Appleton 2020.</note> So, while its longer
-                                                title in the Tibetan Kangyur describes it as a
+                                                title in the Kangyur describes it as a
                                                 Mahāyāna sūtra, the narrative type, its themes, and
                                                 motifs are not unique to the Mahāyāna tradition.</p>
                                         <milestone unit="chunk" xml:id="UT22084-061-009-62"/>
@@ -306,7 +311,7 @@
                         <title xml:lang="en">The Prediction for
                                                   Brahmaśrī</title> is found in the general sūtra
                                                 section (<foreign xml:lang="Bo-Ltn" type="term">mdo
-                                                  sde</foreign>) of the various Tibetan Kangyurs.
+                                                  sde</foreign>) of the various Kangyurs.
                                                 Most of its colophons indicate that it was
                                                 translated by the Indian scholar Viśuddhasiṃha and
                                                 the translator Bandé Gewa Pal and edited by
@@ -868,8 +873,8 @@
                         <gloss type="person" xml:id="UT22084-061-009-134">
                                                   <term type="translationMain">Viśuddhasiṃha</term>
                                                   <term status="verified" xml:lang="Bo-Ltn" n="1">bi
-                                                  shud+d+ha sid+ha</term>
-                                                  <term xml:lang="bo" n="1">བི་ཤུདྡྷ་སིདྷ།</term>
+                                                  shud+d+ha sing+ha</term>
+                            <term xml:lang="bo" n="1" status="verified">བི་ཤུདྡྷ་སིངྷ།</term>
                                                   <term status="verified" xml:lang="Sa-Ltn" type="reconstructedPhonetic">viśuddhasiṃha</term>
                                                   <note type="definition">
                                 <p>One of the scholars
@@ -881,8 +886,8 @@
                                         <item>
                         <gloss type="person" xml:id="UT22084-061-009-135">
                                                   <term type="translationMain">Vidyākarasiṃha</term>
-                                                  <term status="verified" xml:lang="Bo-Ltn" n="1">bid+yA ka ra sid+ha</term>
-                                                  <term xml:lang="bo" n="1">བིདྱཱ་ཀ་ར་སིདྷ།</term>
+                                                  <term status="verified" xml:lang="Bo-Ltn" n="1">bid+yA ka ra sing+ha</term>
+                            <term xml:lang="bo" n="1" status="verified">བིདྱཱ་ཀ་ར་སིངྷ།</term>
                                                   <term status="verified" xml:lang="Sa-Ltn" type="reconstructedPhonetic">vidyākarasiṃha</term>
                                                   <note type="definition">
                                 <p>One of the scholars
