--- a/translations/kangyur/translations/043-010_toh73-the_sutra_of_the_questions_of_udayana_king_of_vatsa.xml
+++ b/translations/kangyur/translations/043-010_toh73-the_sutra_of_the_questions_of_udayana_king_of_vatsa.xml
@@ -32,7 +32,7 @@
         <editor role="finalReviewer" xml:id="UT22084-043-010-409">Andreas Doctor</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.1 <date>2024</date>
+                <edition>v 1.0.2 <date>2024</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -186,6 +186,9 @@
                 </change>
                 <change who="#konchog" when="2024-03-12T15:12:31.842Z" type="text-version" status="1.0.1" xml:id="UT22084-043-010-416">
                     <desc>Quotation marks deleted from title above translation, one other small fix.</desc>
+                </change>
+                <change who="#andre" when="2024-03-23T17:33:01.797Z" type="text-version" status="1.0.2" xml:id="UT22084-043-010-417">
+                    <desc>Glossary matching revised. Activated in CG</desc>
                 </change>
       </revisionDesc>
     </fileDesc>
@@ -1805,7 +1808,7 @@
               China</title>. Third Edition. Leiden: Brill, 1959 (2007 reprint).</bibl>
         </tei:div>
       </tei:div>
-      <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="glossary" status="excluded">
+      <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="glossary">
         <list type="glossary">
           <item>
                         <gloss type="term" xml:id="UT22084-043-010-309">
