--- a/translations/kangyur/translations/043-012_toh75-the_sutra_of_gangottaras_questions.xml
+++ b/translations/kangyur/translations/043-012_toh75-the_sutra_of_gangottaras_questions.xml
@@ -26,7 +26,7 @@
         <editor role="finalReviewer" xml:id="UT22084-043-012-233">George FitzHerbert</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.1 <date>2024</date>
+                <edition>v 1.0.2 <date>2024</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -168,6 +168,9 @@
                 </change>
                 <change who="#konchog" when="2024-03-12T15:23:27.601Z" type="text-version" status="1.0.1" xml:id="UT22084-043-012-238">
                     <desc>Quotation marks removed from title above translation.</desc>
+                </change>
+                <change who="#andre" when="2024-03-24T12:14:06.868Z" type="text-version" status="1.0.2" xml:id="UT22084-043-012-239">
+                    <desc>Glossary integration revised, activated in CG</desc>
                 </change>
       </revisionDesc>
     </fileDesc>
@@ -822,7 +825,7 @@
             227–46.</bibl>
         </tei:div>
       </tei:div>
-      <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="glossary" status="excluded">
+      <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="glossary">
         <list type="glossary">
           <item>
                         <gloss type="term" xml:id="UT22084-043-012-168">
