--- a/translations/kangyur/placeholders/076-004_toh350-the_history_of_kanakavarna.xml
+++ b/translations/kangyur/placeholders/076-004_toh350-the_history_of_kanakavarna.xml
@@ -4,24 +4,26 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">gser mdog gi sngon gyi sbyor ba/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">kanakavarṇapūrvayoga</title>
                 <title type="mainTitle" xml:lang="en">The History of Kanakavarṇa</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">gser mdog gi sngon gyi sbyor ba zhes bya ba</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">kanakavarṇapūrvayoganāma</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Kanakavarṇapūrvayoga</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">gser mdog gi sngon gyi sbyor ba/</title>
                 <title type="otherTitle" xml:lang="en">The Previous Life of Kanakavarṇa</title>
-                <author role="translatorMain" ref="contributors.xml#team-14"/>
-                <author role="translatorEng" ref="contributors.xml#person-99">Thomas Cruijsen</author>
-                <editor role="externalReviewer" ref="contributors.xml#person-165">Robert Miller</editor>
-                <editor role="copyEditor" ref="contributors.xml#person-52">Tracy Davis</editor>
-                <consultant role="projectManager" ref="contributors.xml#person-99">Thomas Cruijsen</consultant>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Kanakavarṇapūrvayoganāma</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">gser mdog gi sngon gyi sbyor ba zhes bya ba</title>
+                <author role="translatorMain" xml:id="UT22084-076-004-1">Bodhinidhi Translation Group</author>
+                <author role="translatorEng" xml:id="UT22084-076-004-2">Thomas Cruijsen</author>
+                <editor role="externalReviewer" xml:id="UT22084-076-004-3">Robert Miller</editor>
+                <editor role="copyEditor" xml:id="UT22084-076-004-4">Tracy Davis</editor>
+                <consultant role="projectManager" xml:id="UT22084-076-004-5">Thomas Cruijsen</consultant>
+                <editor role="reviser" xml:id="UT22084-076-004-16">Khenpo Chowang</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2019</date>
+                <edition>v 0.0.2 <date>2024</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.d">
+            <publicationStmt>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-076-004"/>
                 <date/>
             </publicationStmt>
@@ -36,14 +38,30 @@
                     <idno source-id="O1JC114941JC12039" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2020-06-19T11:57:22.571Z" user="admin">19/06/2020 11:57:22</note>
-            
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-<note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:22:02.06Z" user="mike">2.d</note>
-<note type="updated" update="translation-status" value="2.h" date-time="2020-03-16T15:39:00.776Z" user="line-tofte">2.h</note>
-    <note type="updated" update="translation-status" value="2.d" date-time="2020-06-19T10:28:06.649Z" user="line-tofte">2.d</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2019-12-20T12:56:48.575Z" type="text-version" status="v 0.0.1" xml:id="UT22084-076-004-6">
+                    <desc>Automated version increment</desc>
+                </change>
+                <change who="#mike" when="2020-01-28T06:22:02.06Z" type="translation-status" status="2.d" xml:id="UT22084-076-004-7">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2020-03-16T15:39:00.776Z" type="translation-status" status="2.h" xml:id="UT22084-076-004-8">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2020-06-19T10:28:06.649Z" type="translation-status" status="2.d" xml:id="UT22084-076-004-9">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.2" xml:id="UT22084-076-004-10">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-25T10:28:38.233Z" type="text-version" status="0.0.3" xml:id="UT22084-076-004-17">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-25T10:30:43.659Z" type="text-version" status="0.0.2" xml:id="UT22084-076-004-18">
+                    <desc>User set version to 0.0.2</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
