--- a/translations/kangyur/placeholders/072-018_toh318-the_dharma_discourse_on_the_vast_meaning.xml
+++ b/translations/kangyur/placeholders/072-018_toh318-the_dharma_discourse_on_the_vast_meaning.xml
@@ -9,20 +9,21 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">don rgyas pa'i chos kyi rnam grangs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryārthavistaranāmadharmaparyāya</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa don rgyas pa zhes bya ba'i chos kyi rnam grangs</title>
-                <author role="translatorMain" xml:id="UT22084-072-018-1"/>
+                <author role="translatorMain" xml:id="UT22084-072-018-1">Ina Bieler and team</author>
                 <author role="translatorEng" xml:id="UT22084-072-018-2">Ina Bieler</author>
                 <consultant role="projectManager" xml:id="UT22084-072-018-3">Ina Bieler</consultant>
                 <consultant role="dharmaMaster" xml:id="UT22084-072-018-4">Garchen Rinpoche</consultant>
                 <editor role="reviser" xml:id="UT22084-072-018-5">Ilana Cohen</editor>
                 <editor role="proofreader" xml:id="UT22084-072-018-6">Amber Moore</editor>
                 <consultant role="advisor" xml:id="UT22084-072-018-7">C. Rocco Cheng</consultant>
+                <editor role="projectEditor" xml:id="UT22084-072-018-27">George FitzHerbert</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.9 <date>2024</date>
+                <edition>v 0.0.11 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-072-018"/>
                 <date/>
             </publicationStmt>
@@ -73,6 +74,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-02-26T15:09:51.14Z" type="text-version" status="0.0.9" xml:id="UT22084-072-018-19">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-26T15:11:46.555Z" type="text-version" status="0.0.10" xml:id="UT22084-072-018-28">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-25T13:36:14.606Z" type="translation-status" status="2.f" xml:id="UT22084-072-018-29">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-25T13:36:14.606Z" type="text-version" status="0.0.11" xml:id="UT22084-072-018-30">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
