--- a/translations/kangyur/placeholders/072-019_toh319-the_marvelous_dharma_discourse.xml
+++ b/translations/kangyur/placeholders/072-019_toh319-the_marvelous_dharma_discourse.xml
@@ -9,18 +9,19 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">rmad du byung ba'i chos kyi rnam grangs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryādbhutadharmaparyāyanāma</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rmad du byung ba zhes bya ba'i chos kyi rnam grangs</title>
-                <author role="translatorMain" xml:id="UT22084-072-019-1"/>
+                <author role="translatorMain" xml:id="UT22084-072-019-1">Mārgaphala Translation Team</author>
                 <consultant role="dharmaMaster" xml:id="UT22084-072-019-2">Geshe Samten Gyatso</consultant>
                 <author role="translatorEng" xml:id="UT22084-072-019-3">Bianba Deji</author>
                 <author role="translatorEng" xml:id="UT22084-072-019-4">Daigengna Duoer</author>
                 <editor role="proofreader" xml:id="UT22084-072-019-5">Daigengna Duoer</editor>
+                <editor role="projectEditor" xml:id="UT22084-072-019-22">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2024</date>
+                <edition>v 0.0.9 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-072-019"/>
                 <date/>
             </publicationStmt>
@@ -68,6 +69,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-02-14T14:22:20.419Z" type="text-version" status="0.0.7" xml:id="UT22084-072-019-16">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-14T14:22:56.897Z" type="text-version" status="0.0.8" xml:id="UT22084-072-019-23">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-25T14:34:05.94Z" type="translation-status" status="2.f" xml:id="UT22084-072-019-24">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-25T14:34:05.94Z" type="text-version" status="0.0.9" xml:id="UT22084-072-019-25">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
