--- a/translations/tengyur/placeholders/075-017_toh3156-simhanadadharani.xml
+++ b/translations/tengyur/placeholders/075-017_toh3156-simhanadadharani.xml
@@ -11,13 +11,14 @@
                 <author role="translatorMain" xml:id="UT23703-075-017-1">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT23703-075-017-2">Catherine Dalton</author>
                 <editor role="projectEditor" xml:id="UT23703-075-017-16">Ryan Damron</editor>
+                <editor role="copyEditor" xml:id="UT23703-075-017-25">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2024</date>
+                <edition>v 0.0.11 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT23703-075-017"/>
                 <date/>
             </publicationStmt>
@@ -76,6 +77,15 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2024-03-04T13:45:32.059Z" type="text-version" status="0.0.9" xml:id="UT23703-075-017-21">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-04T13:46:09.354Z" type="text-version" status="0.0.10" xml:id="UT23703-075-017-26">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-25T16:01:42.406Z" type="translation-status" status="2.d" xml:id="UT23703-075-017-27">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-25T16:01:42.406Z" type="text-version" status="0.0.11" xml:id="UT23703-075-017-28">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
