--- a/translations/tengyur/placeholders/002-002_toh1181-hevajratantrapanjikapadmin.xml
+++ b/translations/tengyur/placeholders/002-002_toh1181-hevajratantrapanjikapadmin.xml
@@ -4,22 +4,24 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
+                <title xml:lang="en" type="mainTitle">A Commentary on the Difficult Points of the Hevajra Tantra called “A Pond of Lotuses”</title>
+                <title xml:lang="Sa-Ltn" type="mainTitle">Hevajra­tantra­pañjikā­padminī­nāma</title>
                 <title xml:lang="bo" type="mainTitle">ཀྱེའི་རྡོ་རྗེའི་རྒྱུད་ཀྱི་དཀའ་འགྲེལ་པདྨ་ཅན་ཞེས་བྱ་བ།</title>
                 <title xml:lang="Bo-Ltn" type="mainTitle">kye'i rdo rje'i rgyud kyi dka' 'grel pad+ma can zhes bya ba/</title>
-                <title xml:lang="Sa-Ltn" type="mainTitle">Hevajra­tantra­pañjikā­padminī­nāma</title>
-                <title xml:lang="en" type="mainTitle">A Commentary on the Difficult Points of the Hevajra Tantra called “A Pond of Lotuses”</title>
-                <author role="translatorMain" ref="contributors.xml#team-44"/>
-                <consultant role="projectManager" ref="contributors.xml#person-264">Klaus-Dieter Mathes</consultant>
-                <author role="translatorEng" ref="contributors.xml#person-365">Cécile Ducher</author>
-                <author role="translatorEng" ref="contributors.xml#person-346">Daniel Gratzer</author>
-                <author role="translatorEng" ref="contributors.xml#person-347">Georgi Krastev</author>
-                <author role="translatorEng" ref="contributors.xml#person-309">Doris Unterthurner</author>
+                <author role="translatorMain" xml:id="UT23703-002-002-1"/>
+                <consultant role="projectManager" xml:id="UT23703-002-002-2">Klaus-Dieter Mathes</consultant>
+                <author role="translatorEng" xml:id="UT23703-002-002-3">Cécile Ducher</author>
+                <author role="translatorEng" xml:id="UT23703-002-002-4">Daniel Gratzer</author>
+                <author role="translatorEng" xml:id="UT23703-002-002-5">Georgi Krastev</author>
+                <author role="translatorEng" xml:id="UT23703-002-002-6">Doris Unterthurner</author>
+                <editor role="projectEditor" xml:id="UT23703-002-002-7">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2020</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.h">
+            <publicationStmt>
+                <availability status="2.g"/>
                 <idno xml:id="UT23703-002-002"/>
                 <date/>
             </publicationStmt>
@@ -27,9 +29,9 @@
                 <bibl key="toh1181" type="text">
                     <ref>Toh 1181</ref>
                     <biblScope>ff. 126v-173r</biblScope>
-                    <author ref="eft:entity-17540" xml:lang="Sa-Ltn">Saroruhavajra</author>
-                    <author role="translatorTib" ref="eft:entity-17538" xml:lang="Bo-Ltn">zhu chen gyi lo tsa ba khu ston dngos grub</author>
-                    <author role="translatorTib" ref="eft:entity-17539" xml:lang="Sa-Ltn">Kṣitigarbhapāda</author>
+                    <author xml:lang="Sa-Ltn" xml:id="UT23703-002-002-8">Saroruhavajra</author>
+                    <author role="translatorTib" xml:lang="Bo-Ltn" xml:id="UT23703-002-002-9">zhu chen gyi lo tsa ba khu ston dngos grub</author>
+                    <author role="translatorTib" xml:lang="Sa-Ltn" xml:id="UT23703-002-002-10">Kṣitigarbhapāda</author>
                     <location work="UT23703" count-pages="94">
                         <volume number="2" start-page="252" end-page="345"/>
                     </location>
@@ -37,17 +39,45 @@
                     <idno source-id="O1JC76301JC7707" work="W23703"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2022-08-04T13:05:54.18Z" user="admin">04/08/2022 13:05:54</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2020-06-10T07:05:11.135Z" user="line-tofte">0.0.1</note>
-                <note type="updated" update="translation-status" value="3" date-time="2020-06-10T07:05:11.135Z" user="line-tofte">3</note>
-                <note type="updated" update="publication-date" value="" date-time="2020-06-10T07:05:11.135Z" user="line-tofte"/>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2020-09-10T06:47:47.42Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2021-04-20T13:15:23.449Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="import" value="fileDesc" import="tengyur-data-1180-1304_PH_new_v2.4.xml" date-time="2021-11-02T12:58:22.645Z" user="admin"/>
-                <note type="updated" update="translation-status" value="2.h" date-time="2022-08-04T13:05:45.981Z" user="line-tofte">2.h</note>
-                <note type="updated" update="text-version" value="0.0.4" date-time="2022-08-04T13:05:45.981Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2020-06-10T07:05:11.135Z" type="text-version" status="0.0.1" xml:id="UT23703-002-002-11">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2020-06-10T07:05:11.135Z" type="translation-status" status="3" xml:id="UT23703-002-002-12">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2020-06-10T07:05:11.135Z" type="publication-date" xml:id="UT23703-002-002-13">
+                    <desc/>
+                </change>
+                <change who="#line-tofte" when="2020-09-10T06:47:47.42Z" type="text-version" status="0.0.2" xml:id="UT23703-002-002-14">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-04-20T13:15:23.449Z" type="text-version" status="0.0.3" xml:id="UT23703-002-002-15">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2021-11-02T12:58:22.645Z" type="import" xml:id="UT23703-002-002-16" source="tengyur-data-1180-1304_PH_new_v2.4.xml">
+                    <desc/>
+                </change>
+                <change who="#line-tofte" when="2022-08-04T13:05:45.981Z" type="translation-status" status="2.h" xml:id="UT23703-002-002-17">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2022-08-04T13:05:45.981Z" type="text-version" status="0.0.4" xml:id="UT23703-002-002-18">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-06-29T09:18:22.79Z" type="text-version" status="0.0.5" xml:id="UT23703-002-002-19">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.6" xml:id="UT23703-002-002-20">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-25T16:22:50.569Z" type="translation-status" status="2.g" xml:id="UT23703-002-002-21">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-25T16:22:50.569Z" type="text-version" status="0.0.7" xml:id="UT23703-002-002-22">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
