--- a/translations/kangyur/placeholders/077-005_toh364-the_essence_of_the_tantra_of_kalacakra.xml
+++ b/translations/kangyur/placeholders/077-005_toh364-the_essence_of_the_tantra_of_kalacakra.xml
@@ -5,13 +5,18 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">dus kyi 'khor rgyud kyi snying po/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">kālacakragarbhanāmatantra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Kālacakragarbhanāmatantra</title>
                 <title type="mainTitle" xml:lang="en">The Essence of the Tantra of Kālacakra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">[the Sanskrit translates as:] The Tantra known as "The Essence of Kālacakra"</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">dpal dus kyi 'khor lo zhes bya ba'i rgyud kyi snying po/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">śrīkālacakragarbhanāmatantra</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Śrīkālacakragarbhanāmatantra</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2024</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt>
+                <availability status="4"/>
                 <idno xml:id="UT22084-077-005"/>
             </publicationStmt>
             <sourceDesc>
@@ -25,9 +30,19 @@
                     <idno source-id="O1JC114941JC12057" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:28:43 by admin</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-077-005-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-26T08:03:09.669Z" type="translation-status" status="4" xml:id="UT22084-077-005-2">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-26T08:03:09.669Z" type="text-version" status="0.0.1" xml:id="UT22084-077-005-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
