--- a/translations/kangyur/translations/090-003_toh559-the_great_peahen_queen_of_incantations.xml
+++ b/translations/kangyur/translations/090-003_toh559-the_great_peahen_queen_of_incantations.xml
@@ -29,7 +29,7 @@
                 <sponsor xml:id="UT22084-090-003-1862">DJKR, Herlintje, Hadi Widjaja, Lina Herlintje, Ocean Widjaja, Asia Widjaja, Star Widjaja and Gold Widjaja</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.8 <date>2024</date>
+                <edition>v 1.0.9 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -142,6 +142,9 @@
                 </change>
                 <change who="#martina-cotter" when="2024-03-07T14:58:11.985Z" type="text-version" status="1.0.8" xml:id="UT22084-090-003-1868">
                     <desc>Reviewed glossary</desc>
+                </change>
+                <change who="#andre" when="2024-03-26T12:06:14.628Z" type="text-version" status="1.0.9" xml:id="UT22084-090-003-1869">
+                    <desc>Glossary integration in CG revised, activated in CG</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -2815,7 +2818,7 @@
                             Valuka,<note place="end" xml:id="UT22084-090-003-479"> This line is not
                             attested in the Sanskrit. </note> the nāga king Ulūka,<note place="end" xml:id="UT22084-090-003-480"> Degé reads <foreign xml:lang="Bo-Ltn" type="quote">a lu ka</foreign> but has been emended based on the
                             Sanskrit and S (<foreign xml:lang="Bo-Ltn" type="quote">u lu
-                                ka</foreign>).</note> the nāga king Hulu,<note place="end" xml:id="UT22084-090-003-481"> The Sanskrit reads <foreign xml:lang="Sa-Ltn" type="quote">luka</foreign>. </note> the nāga king
+                                ka</foreign>).</note> the nāga king <term>Hulu</term>,<note place="end" xml:id="UT22084-090-003-481"> The Sanskrit reads <foreign xml:lang="Sa-Ltn" type="quote">luka</foreign>. </note> the nāga king
                         Ela, the nāga king Elaparṇa,<note place="end" xml:id="UT22084-090-003-482">
                             Tib. <foreign xml:lang="Bo-Ltn" type="quote">e la’i lo ma</foreign>. The
                             Sanskrit reads <foreign xml:lang="Sa-Ltn" type="quote">elavarṇa</foreign>.</note> the nāga king Alabāla, the nāga king
@@ -3843,7 +3846,7 @@
                         (Fall 2006): 89–123.</bibl>
                 </div>
             </div>
-            <div type="glossary" status="excluded">
+            <div type="glossary">
                 <list type="glossary">
                     <item>
                         <gloss type="term" xml:id="UT22084-090-003-674">
@@ -13818,7 +13821,7 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="person" xml:id="UT22084-090-003-1566">
+                        <gloss type="person" xml:id="UT22084-090-003-1566" mode="marked">
                             <term type="translationMain">Hulu</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">hulu</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">hu lu</term>
