--- a/translations/kangyur/placeholders/072-019_toh319-the_marvelous_dharma_discourse.xml
+++ b/translations/kangyur/placeholders/072-019_toh319-the_marvelous_dharma_discourse.xml
@@ -17,11 +17,11 @@
                 <editor role="projectEditor" xml:id="UT22084-072-019-22">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2024</date>
+                <edition>v 0.0.10 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-072-019"/>
                 <date/>
             </publicationStmt>
@@ -78,6 +78,12 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2024-03-25T14:34:05.94Z" type="text-version" status="0.0.9" xml:id="UT22084-072-019-25">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-27T11:56:19.225Z" type="translation-status" status="2.e" xml:id="UT22084-072-019-26">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-27T11:56:19.225Z" type="text-version" status="0.0.10" xml:id="UT22084-072-019-27">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
