--- a/translations/tengyur/publications/113-010_toh3990-aryacaturdharmakavyakhyana.xml
+++ b/translations/tengyur/publications/113-010_toh3990-aryacaturdharmakavyakhyana.xml
@@ -9,7 +9,7 @@
                                 <title type="mainTitle" xml:lang="bo">འཕགས་པ་ཆོས་བཞི་པའི་རྣམ་པར་བཤད་པ།</title>
                                 <title type="mainTitle" xml:lang="en">An Explanation of The Noble
                                         Sūtra on the Four Factors</title>
-                                <title type="longTitle" xml:lang="Sa-Ltn">*Ārya­catur­dharmaka­vyākhyāna</title>
+                                <title type="mainTitle" xml:lang="Sa-Ltn">*Ārya­catur­dharmaka­vyākhyāna</title>
                                 <author role="translatorMain" xml:id="UT23703-113-010-59">Translated by Adam
                                         Pearcey<lb/>under the patronage and supervision of 84000:
                                         Translating the Words of the Buddha</author>
@@ -26,7 +26,7 @@
                                         Cotter</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.6 <date>2024</date>
+                <edition>v 1.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -53,11 +53,11 @@
                                         standard logic.</note>
                 <date>2023-08-14</date>
             </publicationStmt>
-                        <sourceDesc>
+                        <tei:sourceDesc xmlns:tei="http://www.tei-c.org/ns/1.0">
                                 <bibl key="toh3990" type="text">
                                         <ref>Toh 3990</ref>
                                         <biblScope>Degé Tengyur, vol. 113 (mdo ’grel, ngi), folios
-                                                66.a–66.b </biblScope>
+                                                66.a–66.b</biblScope>
                                         <author xml:lang="Sa-Ltn" xml:id="UT23703-113-010-66">Vasubandhu</author>
                                         <location work="UT23703" count-pages="2">
                                                 <volume number="113" start-page="131" end-page="132"/>
@@ -66,7 +66,7 @@
                                         <idno source-id="O1JC76301JC10662" work="W23703"/>
                                 </bibl>
                                 <link type="isCommentaryOf" target="toh251"/>
-                        </sourceDesc>
+                        </tei:sourceDesc>
                         <notesStmt/>
                     <revisionDesc>
                 <change who="#line-tofte" when="2022-01-28T08:36:55.219Z" type="translation-status" status="4" xml:id="UT23703-113-010-67">
@@ -222,6 +222,9 @@
                 <change who="#martina-cotter" when="2024-02-20T18:01:50.795Z" type="text-version" status="1.0.6" xml:id="UT23703-113-010-259">
                     <desc>update footnote 2</desc>
                 </change>
+                <change who="#celso" when="2024-03-27T12:59:31.833Z" type="text-version" status="1.0.7" xml:id="UT23703-113-010-260">
+                    <desc>modified title type</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
         </teiHeader>
@@ -230,7 +233,7 @@
                     Outline to the text is quite complex, it is recommended that you paste the outlined contents from the DOCX here as a comment for
                     markup's reference. The actual table of contents will be generated in the Reading Room by the parser.-->
                 <front>
-                        <div type="summary">
+                        <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="summary">
                                 <head type="summary" tid="1">Summary</head>
                                 <milestone unit="chunk" xml:id="UT23703-113-010-1"/>
                                 <p tid="2">This short commentary, ascribed to Vasubandhu, explains
@@ -246,18 +249,18 @@
                                         factors, which obstructive elements these factors overcome,
                                         which beneficial elements they support, and why śrāvakas and
                                         pratyekabuddhas are not called bodhisattvas.</p>
-                        </div>
-                        <div type="acknowledgment">
+                        </tei:div>
+                        <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="acknowledgment">
                                 <head type="acknowledgment" tid="3">Acknowledgements</head>
                                 <milestone unit="chunk" xml:id="UT23703-113-010-2"/>
                                 <p tid="4">The translation was completed by Adam Pearcey, under the
                                         patronage and supervision of 84000: Translating the Words of
                                         the Buddha, and was edited by the 84000 editorial team.</p>
                                 <lb/>
-                        </div>
-                        <div type="introduction">
+                        </tei:div>
+                        <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="introduction">
                                 <head type="introduction" tid="7">Introduction</head>
-                                <div type="section" xml:id="UT23703-113-010-introduction-1">
+                                <tei:div type="section" xml:id="UT23703-113-010-introduction-1">
                                         <milestone unit="chunk" xml:id="UT23703-113-010-5"/>
                                         <p tid="9">
                         <title xml:lang="en">An Explanation of The Noble
@@ -361,15 +364,15 @@
                                                 Comparative Edition (<title xml:lang="Bo-Ltn">dpe
                                                   bsdur ma</title>) and the commentary ascribed to
                                                 Jñānadatta. </p>
-                                </div>
-                        </div>
+                                </tei:div>
+                        </tei:div>
                 </front>
                 <body>
-                        <div type="translation">
+                        <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="translation">
                                 <head type="translation"> The Translation </head>
                                 <head type="titleMain" tid="16">An Explanation of The Noble Sūtra on
                                         the Four Factors</head>
-                                <div type="section" xml:id="UT23703-113-010-section-1">
+                                <tei:div type="section" xml:id="UT23703-113-010-section-1">
                                         <milestone unit="chunk" xml:id="UT23703-113-010-17"/>
                                         <p tid="20">
                         <ref cRef="F.66.a" type="folio" xml:id="UT23703-113-010-57"/> Homage to the youthful Mañjuśrī!</p>
@@ -503,16 +506,16 @@
                                                   Explanation of The Noble Sūtra of the Four Factors”
                                                   by the Master Vasubandhu.</title>
                     </trailer>
-                                </div>
-                        </div>
+                                </tei:div>
+                        </tei:div>
                 </body>
                 <back>
-                        <div type="notes">
+                        <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="notes">
                                 <head type="notes" tid="36">Notes</head>
-                        </div>
-                        <div type="listBibl">
+                        </tei:div>
+                        <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="listBibl">
                                 <head type="listBibl" tid="38">Bibliography</head>
-                                <div type="section" xml:id="UT23703-113-010-listBibl-1">
+                                <tei:div type="section" xml:id="UT23703-113-010-listBibl-1">
                                         <head type="section" tid="39">Tibetan Texts</head>
                                         <bibl xml:id="UT23703-113-010-35">Vasubandhu.<title xml:lang="Bo-Ltn">’phags pa chos bzhi pa’i rnam
                                                 par bshad pa</title> (*<title xml:lang="Sa-Ltn">Ārya­catur­dharma­kavyākhyāna</title>). Toh 3990.
@@ -566,8 +569,8 @@
                                                 British Library, London. Accessed through The
                                                 International Dunhuang Project: The Silk Road
                                                 Online.</bibl>
-                                </div>
-                                <div type="section" xml:id="UT23703-113-010-listBibl-2">
+                                </tei:div>
+                                <tei:div type="section" xml:id="UT23703-113-010-listBibl-2">
                                         <head type="section" tid="40">Western Language Sources and
                                                 Translations</head>
                                         <bibl xml:id="UT23703-113-010-43">Anacker, Stefan. <title xml:lang="en">Seven Works of Vasubandhu: The
@@ -608,9 +611,9 @@
                                         <bibl xml:id="UT23703-113-010-48">———— (2021). <title xml:lang="en">Questioning the Buddha: A Selection
                                                   of Twenty-Five Sutras</title>. Somerville, MA:
                                                 Wisdom Publications, 2021.</bibl>
-                                </div>
-                        </div>
-                        <div type="glossary">
+                                </tei:div>
+                        </tei:div>
+                        <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="glossary">
                                 <list type="glossary">
                                         <item>
                         <gloss type="term" xml:id="UT23703-113-010-50">
@@ -685,7 +688,7 @@
                          </gloss>
                     </item>
                         </list>
-                        </div>
+                        </tei:div>
                 </back>
         </text>
 </TEI>
