--- a/translations/kangyur/placeholders/090-023_toh579,935-the_incantation_the_essence_of_the_six_perfections.xml
+++ b/translations/kangyur/placeholders/090-023_toh579,935-the_incantation_the_essence_of_the_six_perfections.xml
@@ -16,11 +16,11 @@
                 <editor role="copyEditor" xml:id="UT22084-090-023-23">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.12 <date>2024</date>
+                <edition>v 0.0.13 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-090-023"/>
                 <date/>
             </publicationStmt>
@@ -101,6 +101,12 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2024-03-27T13:24:37.338Z" type="text-version" status="0.0.12" xml:id="UT22084-090-023-28">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-27T13:41:49.74Z" type="translation-status" status="2.a" xml:id="UT22084-090-023-29">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-27T13:41:49.74Z" type="text-version" status="0.0.13" xml:id="UT22084-090-023-30">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
