--- a/translations/kangyur/placeholders/090-025_toh581,937-the_incantation_that_gains_the_ten_perfections.xml
+++ b/translations/kangyur/placeholders/090-025_toh581,937-the_incantation_that_gains_the_ten_perfections.xml
@@ -15,11 +15,11 @@
                 <editor role="copyEditor" xml:id="UT22084-090-025-23">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.11 <date>2024</date>
+                <edition>v 0.0.12 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-090-025"/>
                 <date/>
             </publicationStmt>
@@ -94,6 +94,12 @@
                     <desc>2.d</desc>
                 </change>
                 <change who="#line-tofte" when="2024-03-04T10:23:15.775Z" type="text-version" status="0.0.11" xml:id="UT22084-090-025-26">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-27T13:43:08.145Z" type="translation-status" status="2.a" xml:id="UT22084-090-025-27">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-27T13:43:08.145Z" type="text-version" status="0.0.12" xml:id="UT22084-090-025-28">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
